--- a/public/css/app.css
+++ b/public/css/app.css
@@ -40,3 +40,78 @@ a {
 .table {
     color:white;
 }
+
+.rightbar {
+    float: right;
+    margin-right: 4%;
+    margin-top: 50px;
+    font-size: 19px;
+    color: black;
+    text-align: center;
+}
+
+.meldingen {
+    width: 300px;
+    background: white;
+    height: 300px;
+    border-radius:20px;
+    padding:10px;
+}
+
+.newbooks {
+    width: 300px;
+    background: white;
+    height: 350px;
+    border-radius: 20px;
+    margin-top: 20px;
+    padding: 10px;
+}
+
+.newbooks a {
+    color:black !important;
+    text-decoration:none;
+}
+
+.text {
+    width: 650px;
+    font-size: 25px;
+    margin-left: 13%;
+    margin-top: 10%;
+}
+
+.foto {
+    width: 650px;
+    margin-left: 29%;
+    margin-top: -90px;
+}
+
+.lid {
+    width: 150px;
+    background: white;
+    text-align: center;
+    color: black;
+    border-radius: 20px;
+    height: 60px;
+    padding: 9px;
+    font-size: 25px;
+    font-weight: bold;
+    margin-top: -145px;
+    margin-left:15%;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 15px black;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: white;
+}
+
+    ::-webkit-scrollbar-thumb:hover {
+        background: white;
+    }
