--- a/public/css/app.css
+++ b/public/css/app.css
@@ -104,14 +104,92 @@ a {
 }
 
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 15px black;
+    box-shadow: inset 0 0 15px #1E3339;
     border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
     background: white;
+    border-radius:20px;
 }
 
     ::-webkit-scrollbar-thumb:hover {
         background: white;
+    }
+
+tr.boeken {
+    background: white;
+    float: left;
+    padding: 10px;
+    margin: 1%;
+    border-radius: 20px;
+    color: black;
+    width: 48%;
+    height: 300px;
+    overflow: hidden;
+}
+
+.table {
+    float: left;
+    margin-top: 25px;
+}
+
+.boekenlijst {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    font-size: 40px;
+    margin-top: 25px;
+    font-weight:bold;
+}
+
+.boekfoto {
+    height: 95%;
+    max-width: 100%;
+}
+
+td {
+    border: none !important;
+    display: block;
+}
+
+.textboek {
+    float: left;
+    width: 50%;
+    padding-left: 10px;
+}
+
+.fotoboek {
+    float: left;
+    width: 50%;
+}
+
+.filters {
+    font-size: 20px;
+    font-weight: normal;
+    margin-right: 1%;
+}
+
+    .filters input.form-control {
+        width: 20%;
+        float: left;
+        margin-left: 1%;
+        height: 40px;
+    }
+
+    .filters select.form-select {
+        width: 20%;
+        float: left;
+        margin-left: 1%;
+        height: 40px;
+    }
+
+    .filters input[type="submit"] {
+        width: 15%;
+        float: left;
+        margin-left: 1%;
+        border-radius: 10px;
+        height: 40px;
+        border: 1px solid #ced4da;
     }
