--- a/public/css/app.css
+++ b/public/css/app.css
@@ -45,7 +45,7 @@ a {
     float: right;
     margin-right: 4%;
     margin-top: 50px;
-    font-size: 19px;
+    font-size: 16px;
     color: black;
     text-align: center;
 }
@@ -53,15 +53,15 @@ a {
 .meldingen {
     width: 300px;
     background: white;
-    height: 300px;
-    border-radius:20px;
-    padding:10px;
+    height: 34%;
+    border-radius: 20px;
+    padding: 10px;
 }
 
 .newbooks {
     width: 300px;
     background: white;
-    height: 350px;
+    height: 39%;
     border-radius: 20px;
     margin-top: 20px;
     padding: 10px;
@@ -141,7 +141,7 @@ tr.boeken {
     text-align: center;
     font-size: 40px;
     margin-top: 25px;
-    font-weight:bold;
+    font-weight: bold;
 }
 
 .boekfoto {
@@ -149,7 +149,7 @@ tr.boeken {
     max-width: 100%;
 }
 
-td {
+.boeken td {
     border: none !important;
     display: block;
 }
@@ -193,3 +193,103 @@ td {
         height: 40px;
         border: 1px solid #ced4da;
     }
+
+ul.pagination.justify-content-center {
+    float: left;
+    width: 100%;
+}
+
+.bookfoto {
+    height: 100%;
+    max-width:100%;
+}
+
+.boekinfo {
+    width: 48%;
+    float: left;
+    margin-top: 3%;
+}
+
+.fotobook {
+    height: 65%;
+    width: 48%;
+    float: left;
+    text-align: center;
+    margin-top: 3%;
+}
+
+.bookinfo {
+    width: 48%;
+}
+
+.accountinfo {
+    float: left;
+    width: 25%;
+    height: 100px;
+    margin-top: 5%;
+    text-align: center;
+    font-size: 20px;
+}
+
+.accountboeken {
+    float: left;
+    width: 74%;
+    margin-top: 5%;
+    background: white;
+    color: black;
+    border-radius: 20px;
+    padding: 10px;
+    height: 70%;
+}
+
+.tableaccountboeken {
+    background: white;
+    color: black;
+    border-radius: 20px;
+    width: 100%;
+    font-size: 22px;
+}
+
+.tableaccountboeken tr {
+    height: 75px;
+}
+
+.terug {
+    margin-top: 2%;
+    width: 80%;
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.terug a {
+    text-decoration:none;
+}
+
+.accountboeken a {
+    color: black;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+    display: block;
+    text-decoration: none;
+    font-size: 22px;
+}
+
+.switch {
+    width: 60px;
+}
+
+.picture {
+    width:100%;
+}
+
+.profilepicture {
+    width:80%;
+    text-align:center;
+    margin-left:auto;
+    margin-right:auto;
+    background:white;
+    border-radius:50%;
+}
+
