Reserveren van boeken

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -208,6 +208,7 @@ ul.pagination.justify-content-center {
     width: 48%;
     float: left;
     margin-top: 3%;
+    font-size: 26px;
 }
 
 .fotobook {
@@ -221,6 +222,29 @@ ul.pagination.justify-content-center {
 .bookinfo {
     width: 48%;
 }
+
+.reserveren {
+    margin-top:25px;
+}
+
+.reserverenbutton {
+    border-radius:20px;
+    padding:5px;
+    width:200px;
+}
+
+.terug {
+    margin-top: 2%;
+    width: 80%;
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+    .terug a {
+        text-decoration: none;
+        font-size: 22px;
+    }
 
 .accountinfo {
     float: left;
@@ -254,16 +278,8 @@ ul.pagination.justify-content-center {
     height: 75px;
 }
 
-.terug {
-    margin-top: 2%;
-    width: 80%;
-    text-align: left;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.terug a {
-    text-decoration:none;
+.tableaccountboeken tbody {
+    vertical-align: baseline;
 }
 
 .accountboeken a {
