--- a/public/css/app.css
+++ b/public/css/app.css
@@ -272,10 +272,11 @@ ul.pagination.justify-content-center {
     border-radius: 20px;
     width: 100%;
     font-size: 22px;
+    height: fit-content;
 }
 
 .tableaccountboeken tr {
-    height: 75px;
+    height: 60px;
 }
 
 .tableaccountboeken tbody {
@@ -307,5 +308,76 @@ ul.pagination.justify-content-center {
     margin-right:auto;
     background:white;
     border-radius:50%;
+}
+
+.alert.alert-success {
+    width: 300px;
+    float: right;
+    text-align: center;
+    margin-right: 2%;
+}
+
+.box {
+    width: 40%;
+    margin: 0 auto;
+    background: rgba(255,255,255,0.2);
+    padding: 35px;
+    border: 2px solid #fff;
+    border-radius: 20px/50px;
+    background-clip: padding-box;
+    text-align: center;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.7);
+    transition: opacity 500ms;
+    visibility: hidden;
+    opacity: 0;
+}
+
+    .overlay:target {
+        visibility: visible;
+        opacity: 1;
+    }
+
+.popup {
+    margin: 70px auto;
+    padding: 20px;
+    background: #fff;
+    border-radius: 5px;
+    width: 30%;
+    position: relative;
+    transition: all 5s ease-in-out;
+}
+
+    .popup h2 {
+        margin-top: 0;
+        color: #333;
+        font-family: Tahoma, Arial, sans-serif;
+    }
+
+    .popup .close {
+        position: absolute;
+        top: 20px;
+        right: 30px;
+        transition: all 200ms;
+        font-size: 30px;
+        font-weight: bold;
+        text-decoration: none;
+        color: #333;
+    }
+
+.popup .close:hover {
+    color: #06D85F;
+}
+
+.popup .content {
+    max-height: 30%;
+    overflow: auto;
 }
 
