--- a/public/css/app.css
+++ b/public/css/app.css
@@ -442,3 +442,36 @@ ul.pagination.justify-content-center {
         margin-right: auto;
         color: black;
     }
+
+.abbonement {
+    width: 33%;
+    float: left;
+    text-align: center;
+}
+
+.abbonementen {
+    margin-top:5%;
+}
+
+label {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    background: white;
+    color: black;
+    height: 300px;
+    border-radius: 20px;
+}
+
+input {
+    display: none;
+}
+
+:checked + label {
+    box-shadow: 0 0 5px rgba(81, 203, 238, 1);
+    outline: 4px solid rgba(81, 203, 238, 1);
+}
+
+.count {
+    display:none !important;
+}
