--- a/public/css/app.css
+++ b/public/css/app.css
@@ -453,7 +453,7 @@ ul.pagination.justify-content-center {
     margin-top:5%;
 }
 
-label {
+.abbonementen label {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
@@ -464,7 +464,7 @@ label {
     padding: 10px;
 }
 
-input {
+.abbonementen input {
     display: none;
 }
 
