--- a/public/css/app.css
+++ b/public/css/app.css
@@ -266,7 +266,7 @@ ul.pagination.justify-content-center {
     background: white;
     color: black;
     border-radius: 20px;
-    padding: 10px;
+    padding: 20px;
     height: 70%;
 }
 
@@ -302,7 +302,11 @@ ul.pagination.justify-content-center {
 }
 
 .picture {
-    width:100%;
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+    object-fit: cover;
+    border-radius: 50%;
 }
 
 .profilepicture {
@@ -356,7 +360,6 @@ ul.pagination.justify-content-center {
     border-radius: 5px;
     width: 30%;
     position: relative;
-    transition: all 5s ease-in-out;
 }
 
     .popup h2 {
@@ -499,3 +502,119 @@ ul.pagination.justify-content-center {
     .verder button.btn.btn-block.btn-primary {
         margin-top:60px;
     }
+
+.links {
+    text-align: center;
+    width: 96%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top:2%;
+}
+
+.link {
+    width: 14.5%;
+    float: left;
+    background: white;
+    color: black;
+    margin-left: 1%;
+    margin-right: 1%;
+    border-radius: 20px;
+    padding: 10px;
+    text-decoration:none;
+}
+
+a.link:hover {
+    color:black !important;
+    text-decoration:none;
+}
+
+.custom-file {
+    font-size: 14px;
+    margin-top: 3%;
+}
+
+.uploadfoto {
+    border-radius: 10px;
+    border: 0px;
+    margin-top: 5px;
+    background: #0d6efd;
+    color: white;
+    padding: 5px;
+    font-size: 19px;
+}
+
+.beheerfield {
+    width: 94%;
+    margin-left: auto;
+    margin-right: auto;
+    background: white;
+    border-radius: 20px;
+    color: black;
+    padding: 20px;
+    text-align: center;
+    height: 65%;
+    margin-top: 2%;
+}
+
+.beheertable {
+    color: black;
+    width: 100%;
+    font-size: 22px;
+    margin-bottom: 3%;
+}
+
+    .beheertable tr {
+        height: 60px;
+        border-bottom:1px solid black
+    }
+
+    .beheertable tr:hover {
+        cursor:pointer;
+    }
+
+.userpicture {
+    width: 20%;
+    float: left;
+}
+
+.userinfo {
+    width: 65%;
+    float: left;
+    text-align: left;
+    margin-left: 10%;
+    font-size: 20px;
+    line-height: 36px;
+}
+
+.beheerterug {
+    text-align: left;
+    margin-bottom: 25px;
+}
+
+.beheerterug a {
+    color: black;
+    text-decoration: none;
+    text-align: left;
+    font-size:21px;
+    margin-left:20px;
+}
+
+.deletesubmit {
+    border-radius: 10px;
+    border: 0px;
+    margin-top: 15px;
+    background: #0d6efd;
+    color: white;
+    padding: 10px;
+    font-size: 19px;
+}
+
+.editform {
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.375rem;
+}
